--- a/view/base/templates/access_denied.phtml
+++ b/view/base/templates/access_denied.phtml
@@ -10,9 +10,11 @@
             text-align: center;
             padding: 25px;
         }
-        .access-denied img {
-            margin-top: 20px;
-            max-width: 125px;
+        a {
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -22,9 +24,6 @@
     <p>Your request was blocked and logged by
         <a href="https://sansec.io/guides/sansec-shield" target="_blank">Sansec Shield</a>.
     </p>
-    <a href="https://sansec.io/" target="_blank">
-        <img src="<?php echo $block->getViewFileUrl('Sansec_Shield::images/logo.svg'); ?>" alt="Sansec Logo">
-    </a>
 </main>
 </body>
 </html>
